# XIFty

./: .gitignore  AGENTS.md  CAPABILITIES.json  CONTRIBUTING.md  Cargo.toml  ENGINEERING_PRINCIPLES.md  FFI_CONTRACT.md  ITERATION_FIVE_CHECKLIST.md  ITERATION_FOUR_CHECKLIST.md  ITERATION_FOUR_PLAN.md  ITERATION_SEVEN_PLAN.md  ITERATION_SIX_CHECKLIST.md  ITERATION_THREE_CHECKLIST.md  ITERATION_THREE_PLAN.md  ITERATION_TWO_CHECKLIST.md  README.md  RESEARCH.md  STATE_OF_THE_PROJECT.md  VISION.md  cbindgen.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  hygiene.yml  pages-demo.yml  runtime-artifacts.yml
.loswf/: config.yaml  plugin-managed
bindings/node/: README.md  binding.gyp  index.js  package.json
bindings/python/: README.md
bindings/swift/: Package.swift  README.md
crates/xifty-cli/: Cargo.toml
crates/xifty-cli/src/: conflict_dedupe.rs  lib.rs  main.rs
crates/xifty-cli/tests/: cli_contract.rs
crates/xifty-cli/tests/snapshots/: cli_contract__conflicting_png_report.snap  cli_contract__extract_big_endian_tiff_normalized.snap  cli_contract__extract_dji_mavic3_interpreted.snap  cli_contract__extract_dji_mavic3_normalized.snap  cli_contract__extract_gps_jpeg_normalized.snap  cli_contract__extract_happy_aiff_normalized.snap  cli_contract__extract_happy_dng_normalized.snap  cli_contract__extract_happy_flac_normalized.snap  cli_contract__extract_happy_jpeg.snap  cli_contract__extract_happy_m4a_interpreted.snap  cli_contract__extract_happy_m4a_normalized.snap  cli_contract__extract_happy_mov_normalized.snap  cli_contract__extract_happy_mp4_normalized.snap  cli_contract__extract_happy_ogg_normalized.snap  cli_contract__extract_happy_opus_normalized.snap  cli_contract__extract_happy_png_report.snap  cli_contract__extract_happy_webp_report.snap  cli_contract__extract_icc_heic_normalized.snap  cli_contract__extract_icc_jpeg_normalized.snap  cli_contract__extract_icc_tiff_normalized.snap  cli_contract__extract_iptc_heic_normalized.snap  cli_contract__extract_iptc_jpeg_normalized.snap  cli_contract__extract_iptc_png_normalized.snap  cli_contract__extract_iptc_tiff_normalized.snap  cli_contract__extract_iptc_webp_normalized.snap  cli_contract__extract_mixed_heic_normalized.snap  cli_contract__extract_mixed_png_normalized.snap  cli_contract__extract_mixed_webp_normalized.snap  cli_contract__extract_real_camera_mp4_interpreted.snap  cli_contract__extract_real_camera_mp4_normalized.snap  cli_contract__extract_real_exif_heic_normalized.snap  cli_contract__extract_video_only_mp4_normalized.snap  cli_contract__extract_xmp_only_png_normalized.snap  cli_contract__extract_xmp_only_webp_normalized.snap  cli_contract__extract_xmp_tiff_normalized.snap  cli_contract__malformed_heic_report.snap  cli_contract__malformed_icc_png_report.snap  cli_contract__malformed_iptc_jpeg_report.snap  cli_contract__malformed_jpeg_report.snap  cli_contract__malformed_mov_report.snap  (+21 more)
crates/xifty-container-aiff/: Cargo.toml
crates/xifty-container-flac/: Cargo.toml
crates/xifty-container-isobmff/: Cargo.toml
crates/xifty-container-jpeg/: Cargo.toml
crates/xifty-container-ogg/: Cargo.toml
crates/xifty-container-png/: Cargo.toml
crates/xifty-container-riff/: Cargo.toml
crates/xifty-container-tiff/: Cargo.toml
crates/xifty-core/: Cargo.toml
crates/xifty-detect/: Cargo.toml
crates/xifty-ffi/: Cargo.toml
crates/xifty-json/: Cargo.toml
crates/xifty-meta-apple/: Cargo.toml
crates/xifty-meta-exif/: Cargo.toml
crates/xifty-meta-exif/src/: lib.rs
crates/xifty-meta-icc/: Cargo.toml
crates/xifty-meta-iptc/: Cargo.toml
crates/xifty-meta-itunes/: Cargo.toml
crates/xifty-meta-quicktime/: Cargo.toml
crates/xifty-meta-rtmd/: Cargo.toml
crates/xifty-meta-sony/: Cargo.toml
crates/xifty-meta-vorbis-comment/: Cargo.toml
crates/xifty-meta-xmp/: Cargo.toml
crates/xifty-normalize/: Cargo.toml
crates/xifty-policy/: Cargo.toml
crates/xifty-source/: Cargo.toml
crates/xifty-validate/: Cargo.toml
crates/xifty-wasm/: Cargo.toml
crates/xifty-wasm/src/: lib.rs
demo/: README.md
demo/web/: app.js  index.html  styles.css
docs/: 55-flac-phase-1.md  56-aiff-aifc-audio-phase-2.md  58-m4a-isobmff-itunes.md  61-dng-verification.md  README.md  RELEASE_CHECKLIST.md  SCHEMA_POLICY.md
docs/adoption/: AWS_LAMBDA_NODE.md  CORE_RUNTIME_ARTIFACTS.md
docs/architecture/: ARCHITECTURE_PLAN.md
docs/iterations/: ITERATION_EIGHT_CHECKLIST.md  ITERATION_EIGHT_PLAN.md  ITERATION_ELEVEN_CHECKLIST.md  ITERATION_ELEVEN_PLAN.md  ITERATION_FIVE_PLAN.md  ITERATION_NINE_CHECKLIST.md  ITERATION_NINE_PLAN.md  ITERATION_ONE_CHECKLIST.md  ITERATION_SEVEN_CHECKLIST.md  ITERATION_SIX_CHECKLIST.md  ITERATION_SIX_PLAN.md  ITERATION_TEN_CHECKLIST.md  ITERATION_TEN_PLAN.md  ITERATION_TWO_PLAN.md
examples/aws-sam-node/: .gitignore  README.md  package-lock.json  package.json  template.yaml
examples/c/: basic_usage.c
examples/node/: basic_usage.js
examples/python/: basic_usage.py
fixtures/: README.md
fixtures/minimal/: big_endian.tiff  conflicting.heic  gps.tiff  happy.aifc  happy.dng  happy.flac  happy.heic  happy.m4a  happy.mov  happy.opus  happy.tiff  icc.heic  icc.tiff  iptc.heic  iptc.tiff  malformed.mov  malformed_box.heic  malformed_offsets.tiff  mixed.heic  no_exif.heic  no_exif.tiff  unsupported.heic  xmp.tiff  xmp_only.heic
fuzz/: Cargo.toml
fuzz/fuzz_targets/: heif_metadata_routing.rs  icc_parser.rs  iptc_parser.rs  isobmff_parser.rs  jpeg_parser.rs  png_parser.rs  quicktime_metadata.rs  riff_parser.rs  tiff_parser.rs  xmp_parser.rs
schemas/: README.md  xifty-analysis-0.1.0.schema.json  xifty-probe-0.1.0.schema.json
specs/: SRS.md  VISION.md
specs/archive/: 10-capabilities-generator.md  12-wasm-demo-ci-smoke.md  13-conflict-source-provenance.md  29-png-webp-iptc.md  40-xmp-dc-subject-keywords.md  42-xmp-rdf-li-attributed.md  44-runtime-artifact-macos-arm64-ci.md  (+6 more)
tools/: README.md  build-node-lambda-layer.sh  build-runtime-artifact.py  build-web-demo.sh  generate_capabilities.py  generate_fixtures.py  validate-runtime-artifact.py  validate_schema_examples.py
(+61 files in other folders)
