[workspace]
members = [
  "crates/xifty-core",
  "crates/xifty-source",
  "crates/xifty-detect",
  "crates/xifty-container-jpeg",
  "crates/xifty-container-tiff",
  "crates/xifty-meta-exif",
  "crates/xifty-normalize",
  "crates/xifty-validate",
  "crates/xifty-json",
  "crates/xifty-ffi",
  "crates/xifty-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["XIFty Contributors"]

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
insta = { version = "1.43.2", features = ["json"] }
