[workspace]
members = [
  "crates/xifty-core",
  "crates/xifty-source",
  "crates/xifty-detect",
  "crates/xifty-container-jpeg",
  "crates/xifty-container-tiff",
  "crates/xifty-container-png",
  "crates/xifty-container-riff",
  "crates/xifty-container-isobmff",
  "crates/xifty-container-flac",
  "crates/xifty-container-aiff",
  "crates/xifty-meta-exif",
  "crates/xifty-meta-icc",
  "crates/xifty-meta-iptc",
  "crates/xifty-meta-apple",
  "crates/xifty-meta-sony",
  "crates/xifty-meta-xmp",
  "crates/xifty-meta-quicktime",
  "crates/xifty-meta-itunes",
  "crates/xifty-meta-rtmd",
  "crates/xifty-meta-vorbis-comment",
  "crates/xifty-normalize",
  "crates/xifty-policy",
  "crates/xifty-validate",
  "crates/xifty-json",
  "crates/xifty-ffi",
  "crates/xifty-cli",
  "crates/xifty-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.6"
authors = ["XIFty Contributors"]

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
flate2 = "1.1.4"
plist = "1.7.0"
thiserror = "2.0.17"
insta = { version = "1.43.2", features = ["json"] }
