[package]
name = "xifty-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
xifty-container-jpeg = { path = "../crates/xifty-container-jpeg" }
xifty-container-png = { path = "../crates/xifty-container-png" }
xifty-container-riff = { path = "../crates/xifty-container-riff" }
xifty-container-tiff = { path = "../crates/xifty-container-tiff" }
xifty-meta-xmp = { path = "../crates/xifty-meta-xmp" }

# Use independent workspace for fuzzers
[workspace]
members = ["."]

[[bin]]
name = "jpeg_parser"
path = "fuzz_targets/jpeg_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tiff_parser"
path = "fuzz_targets/tiff_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "png_parser"
path = "fuzz_targets/png_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "riff_parser"
path = "fuzz_targets/riff_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xmp_parser"
path = "fuzz_targets/xmp_parser.rs"
test = false
doc = false
bench = false
