[package]
name = "xifty-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json.workspace = true
xifty-cli = { path = "../xifty-cli" }
xifty-core = { path = "../xifty-core" }
xifty-json = { path = "../xifty-json" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
